welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:10: error: ';' expected but 'return' found.
  }return a
   ^